--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+= 1.8.5 =
+* Added the full and uncompressed Modernizr 2.8.3 file
+* Using the wp_add_inline_style function to output customizer-configured styles.
+
 = 1.8.4 =
 
 * Fixed the custom login form's action issue, that appeared after the WordPress 4.0 update. The form's action is the default WordPress login page (.../wp-login.php).
